feat: POST /tokens 시 firebase device token 확인 후 append 하는 로직 추가
